# social-agent-platform

./: .gitignore  README.md  platform.manifest.yaml  social-agents.code-workspace
agent-sdk/: .gitignore  README.md  bootstrap.py  pyproject.toml
agent-sdk/src/agent_sdk/: __init__.py  api.py  bot_yaml.py  control.py  events.py  llm.py  models.py  safety.py
agent-sdk/tests/: test_control.py
orchestrator/: .gitignore  orchestrator.yaml
orchestrator/data/: disconnect_log.jsonl
plugins/bot-instagram/: .env.example  .gitignore  README.md  VENDORED_FROM.txt  agency_context.json  bootstrap.py  bot.yaml  main.py  pyproject.toml
plugins/bot-instagram/data/: engage_circuit.json  hashtag_search_history.jsonl  ig_agent.db  scripted_fallback_log.json  video_analyses.db
plugins/bot-instagram/data/raw/: sample_scraped.json
plugins/bot-instagram/data/samples/: Daily_Social_Dashboard_2026-07-18.md  filtered_sample_scraped.json  sample_scraped.json
plugins/bot-instagram/scripts/: backfill_db.py  create_sample_media.py
plugins/bot-instagram/src/ig_agent/: __init__.py  analyzer_store.py  api.py  browser_factory.py  config.py  engage.py  filter.py  format_gate.py  hashtag_rotation.py  ingest.py  ingest_comment_gate.py  llm.py  media_capture.py  multimodal.py  offline.py  persist.py  posts.py  propose.py  runtime.py  safety.py  scheduler.py  scraper.py  scripted_actions.py  spam_filter.py  synthesize.py
plugins/bot-instagram/tests/: test_engagement.py  test_multimodal.py  test_people_first.py  test_pipeline.py
scripts/: bootstrap_lib.py
(+4 files in other folders)
